fix maven-plugin for parallel builds and builds w/o clean; everything is now code complete except for config-driven-services.